Fixed alignment issues

--- a/_uncompressed/sass/styles.scss
+++ b/_uncompressed/sass/styles.scss
@@ -76,6 +76,7 @@ body {
     -webkit-font-smoothing: antialiased;
     background: $black url(../img/bg-main.png) repeat;
     background-attachment: fixed;
+	overflow-x: hidden;
 }
 
 h1, h2, h3 {
@@ -134,7 +135,7 @@ h3 {
 	z-index: 998;
 }
 
-#hero {
+#top {
   position: relative;
   width: 100%;
   z-index: 1000;
@@ -292,6 +293,10 @@ h3 {
 
 .orbit-container .orbit-slides-container img {
 	margin: 0 auto;
+}
+
+.fixed {
+	z-index: 9999;
 }
 
 // End Foundation Overrides
@@ -662,7 +667,7 @@ footer {
 
 @media only screen and (max-height: 800px) { 
   
-  #hero {
+  #top {
     
     .explore {
       display: none;
@@ -722,31 +727,18 @@ footer {
 	}
 	
 }
-/*
 
 @media only screen and (min-width: 40.063em) { 
 	
-	.back-to-top {
-		left: 20px;
-		top: -30px;
-	}
-	
 	#about-content1 {
-	
-		img {
-			width: 210px;
-			position: relative;
-			left: 50%;
-			margin: 0 0 30px -105px;
+
+		#chart {
+			left: 0;
+			margin: 0 auto;
 		}
-	
+
 	}
-	
 }
-
-
-
-*/
 
 
 
